--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "src",
-    "sourceMap": true,
-    "declaration": false,
+    "sourceMap": false,
+    "declaration": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
+    "module": "commonjs",
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": [
